# getopt-learn

./: .gitignore  CMakeLists.txt  README.md  learn.md
src/: CMakeLists.txt  test_1.c  test_2.c  test_3.c  test_4.c  test_5.c  test_6.c  test_7.c
